--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     depends_on:
       - mysql_db
     environment:
-      - DATABASE_URL=mysql+pymysql://${MYSQL_DB_USER}:${MYSQL_DB_PASSWORD}@db:3306/${MYSQL_DB_NAME}
+      - DATABASE_URL=mysql+mysqlconnector://${MYSQL_DB_USER}:${MYSQL_DB_PASSWORD}@${MYSQL_DB_HOST}:${MYSQL_DB_PORT}/${MYSQL_DB_NAME}
 
   mysql_db:
     container_name: emp_service_db
@@ -20,5 +20,6 @@ services:
       MYSQL_USER: ${MYSQL_DB_USER}
       MYSQL_PASSWORD: ${MYSQL_DB_PASSWORD}
       MYSQL_ROOT_PASSWORD: ${MYSQL_DB_ROOTPASSWORD}
+      MYSQL_DATABASE_PORT: ${MYSQL_DB_PORT}
     ports:
       - "3306:3306"
